# mini-redis

./: Cargo.toml  buffered_client_mpsc.json  correspondence.md  descartes_memory.txt  descartes_state.json  descartes_state.md  descartes_targets.md  descartes_targets.txt  identified_targets.md  identified_targets.txt  last_run_target_db_purge_expiry.txt  last_run_targets.txt  last_spec_server_connection.txt  notes.md  notes.txt  run_2026-05-12.txt  run_2026-05-13.txt  spec_db_purge_expiry.md  spec_db_purge_expiry_run.md  state.json  targets.json  targets.md  targets.txt  targets_2026-05-09.txt
.github/workflows/: descartes-squad.lock.yml  descartes-squad.md
descartes-exploration/: CRITIQUE.md  RESEARCH.md  TARGETS.md
descartes-tests/: Cargo.toml
descartes-tests/src/: lib.rs
